@@ -1,6 +1,9 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.16 2003/10/11 22:34:55 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.17 2003/10/12 01:12:03 zhen Exp $
+
+  11 Oct 2003; <zhen@gentoo.org> include/build_functions.sh:
+  fixed SRCBALL and DESTBALL, making it transparent for profiles
 
   11 Oct 2003; <zhen@gentoo.org> catalyst, include/functions.sh:
   added an exit condition to the cmd line argument case statement
